@@ -56,11 +56,11 @@ while (Testing()) {
     Test($state or ($table ne $tableb))
 	or print("Second table name same as first.\n");
 
-    my $query;
-    Test($state or (($query = TableDefinition($table,
-					  ["id", "INTEGER", 4, 0],
-					  ["name", "CHAR", 64, 0]))
-		    and $dbh->do($query)))
+    my $cquery;
+    Test($state or (($cquery = TableDefinition($table,
+					       ["id", "INTEGER", 4, 0],
+					       ["name", "CHAR", 64, 0]))
+		    and $dbh->do($cquery)))
 	or print("Cannot create table $table in directory $dir: ",
 		 $dbh->errstr);
     Test($state or (-f "$dir/$table"))
@@ -68,51 +68,36 @@ while (Testing()) {
     Test($state or ($dbh->do("DROP TABLE $table")  and  !(-f "$dir/$table")))
 	or print("Cannot drop table $table in directory $dir: ",
 		 $dbh->errstr());
+    Test($state or $dbh->disconnect());
 
-
-    #
-    #   Check, whether the csv_tables->{$table}->{file} attribute works
-    #
-    if (!$state) {
-	$dbh->{csv_tables}->{$table}->{file} = $tableb;
-	print "Trying to create file $tableb in directory $dir.\n";
-    }
-    Test($state or $dbh->do($query))
-	or print("Cannot create table $table in directory $dir: ",
-		 $dbh->errstr);
-    Test($state or (-f "$dir/$tableb"))
-	or print("No such file in directory $dir: $tableb");
-    Test($state or ($dbh->do("DROP TABLE $table")  and  !(-f "$dir/$tableb")))
-	or print("Cannot drop table $table in directory $dir: ",
-		 $dbh->errstr());
 
     #
     #   Try to read a semicolon separated file.
     #
-    Test($state or $dbh->disconnect());
 
     my $dsn = "DBI:CSV:f_dir=$dir;csv_eol=\015\012;csv_sep_char=\\;;";
     Test($state or ($dbh = DBI->connect($dsn)))
 	or print "Cannot connect to DSN $dsn: $DBI::errstr\n";
-    Test($state or (($table = FindNewTable($dbh))
-		    and  !(-f "$dir/$table")))
+    my $tablec;
+    Test($state or (($tablec = FindNewTable($dbh))
+		    and  !(-f "$dir/$tablec")))
 	or print("Cannot determine a legal table name: Error ",
 		 $dbh->errstr);
     if (!$state) {
-	print "Trying to create file $table in directory $dir.\n";
+	print "Trying to create file $tablec in directory $dir.\n";
     }
     Test($state or
-	 $dbh->do("CREATE TABLE $table (id INTEGER, name CHAR(64))"))
-	or print("Cannot create table $table: ", $dbh->errstr(), "\n");
+	 $dbh->do("CREATE TABLE $tablec (id INTEGER, name CHAR(64))"))
+	or print("Cannot create table $tablec: ", $dbh->errstr(), "\n");
     Test($state or
-	 $dbh->do("INSERT INTO $table VALUES (1, ?)", undef, "joe"))
-	or print("Cannot insert data into $table: ", $dbh->errstr(), "\n");
+	 $dbh->do("INSERT INTO $tablec VALUES (1, ?)", undef, "joe"))
+	or print("Cannot insert data into $tablec: ", $dbh->errstr(), "\n");
     Test($state or
-	 $dbh->do("INSERT INTO $table VALUES (2, ?)", undef, "Jochen;"))
-	or print("Cannot insert data into $table: ", $dbh->errstr(), "\n");
+	 $dbh->do("INSERT INTO $tablec VALUES (2, ?)", undef, "Jochen;"))
+	or print("Cannot insert data into $tablec: ", $dbh->errstr(), "\n");
     my($sth, $ref);
     Test($state or
-	 ($sth = $dbh->prepare("SELECT * FROM $table")))
+	 ($sth = $dbh->prepare("SELECT * FROM $tablec")))
 	or print("Cannot prepare: ", $dbh->errstr(), "\n");
     Test($state or $sth->execute())
 	or print("Cannot execute: ", $sth->errstr(), "\n");
@@ -124,8 +109,28 @@ while (Testing()) {
 		    $ref->[0] eq "2" and $ref->[1] eq "Jochen;"))
 	or printf("Expected 2,Jochen;, got %s,%s\n", ($ref->[0] || "undef"),
 		  ($ref->[1] || "undef"));
+    Test($state or ($dbh->do("DROP TABLE $tablec")  and  !(-f "$dir/$tablec")))
+	or print("Cannot drop table $tablec in directory $dir: ",
+		 $dbh->errstr());
+    Test($state or $dbh->disconnect());
+
+    #
+    #   Check, whether the csv_tables->{$table}->{file} attribute works
+    #
+    $dsn = "DBI:CSV:";
+    Test($state or ($dbh = DBI->connect($dsn)));
+    if (!$state) {
+	$dbh->{csv_tables}->{$table}->{file} = "$dir/$tableb";
+	print "Trying to create file $tableb in directory $dir.\n";
+    }
+    Test($state or $dbh->do($cquery))
+	or print("Cannot create table $table in directory $dir: ",
+		 $dbh->errstr);
+    Test($state or (-f "$dir/$tableb"))
+	or print("No such file in directory $dir: $tableb");
     Test($state or ($dbh->do("DROP TABLE $table")  and  !(-f "$dir/$tableb")))
 	or print("Cannot drop table $table in directory $dir: ",
 		 $dbh->errstr());
+
 }
 
